# flatten_iterables

./: pyproject.toml
